Fix order cancel route
